UI: fix terminal resize; bottom line is often cut off; some CSS bug cleanups

--- a/salvus/page/cell.css
+++ b/salvus/page/cell.css
@@ -101,7 +101,7 @@
 }
 
 .salvus-cell-stopwatch-running {
-    background-color : cfc;
+    background-color : #cfc;
 }
 
 .salvus-cell-stopwatch-waiting {
